# symta

./: README.md  dune-project  symta.opam
lib/: BMC.ml  JANI.ml  Util.ml  dune
test/: BMC_Example.ml  K_Ind_Example.ml  dune  symta_test.ml
